hugr-llvm/src/extension/snapshots/hugr_llvm__extension__prelude__test__prelude_make_error_and_panic@pre-mem2reg@llvm21.snap
---
source: hugr-llvm/src/extension/prelude.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

@0 = private unnamed_addr constant [7 x i8] c"Error!\00", align 1
@prelude.panic_template = private unnamed_addr constant [34 x i8] c"Program panicked (signal %i): %s\0A\00", align 1

define internal void @_hl.main.1() !dbg !3 {
alloca_block:
  %"7_0" = alloca ptr, align 8
  %"5_0" = alloca i64, align 8
  %"8_0" = alloca { i32, ptr }, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store ptr @0, ptr %"7_0", align 8
  store i64 100, ptr %"5_0", align 4
  %"5_01" = load i64, ptr %"5_0", align 4
  %"7_02" = load ptr, ptr %"7_0", align 8
  %0 = trunc i64 %"5_01" to i32, !dbg !7
  %1 = insertvalue { i32, ptr } undef, i32 %0, 0, !dbg !7
  %2 = insertvalue { i32, ptr } %1, ptr %"7_02", 1, !dbg !7
  store { i32, ptr } %2, ptr %"8_0", align 8, !dbg !7
  %"8_03" = load { i32, ptr }, ptr %"8_0", align 8
  %3 = extractvalue { i32, ptr } %"8_03", 0, !dbg !8
  %4 = extractvalue { i32, ptr } %"8_03", 1, !dbg !8
  %5 = call i32 (ptr, ...) @printf(ptr @prelude.panic_template, i32 %3, ptr %4), !dbg !8
  call void @abort(), !dbg !8
  ret void
}

declare i32 @printf(ptr, ...)

declare void @abort()

!llvm.module.flags = !{!0}
!llvm.dbg.cu = !{!1}

!0 = !{i32 2, !"Debug Info Version", i32 3}
!1 = distinct !DICompileUnit(language: DW_LANG_Python, file: !2, producer: "hugr_llvm_test", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug)
!2 = !DIFile(filename: "/SnVYeXFfvzCkHdtWCCnkJhPKiWS.gpy.py", directory: "/brfVqoqpIlPNzlVLClAphFGI")
!3 = distinct !DISubprogram(name: "_hl.main.1", linkageName: "_hl.main.1", scope: null, file: !4, line: 15761, type: !5, scopeLine: 15762, spFlags: DISPFlagLocalToUnit | DISPFlagDefinition, unit: !1)
!4 = !DIFile(filename: "/SnVYeXFfvzCkHdtWCCnkJhPKiWS.gpy.py", directory: "")
!5 = !DISubroutineType(types: !6)
!6 = !{null}
!7 = !DILocation(line: 11133, column: 138, scope: !3)
!8 = !DILocation(line: 11211, column: 468, scope: !3)
