hugr-llvm/src/extension/snapshots/hugr_llvm__extension__prelude__test__prelude_make_tuple@pre-mem2reg@llvm21.snap
---
source: hugr-llvm/src/extension/prelude.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define internal { i1, i1 } @_hl.main.1(i1 %0, i1 %1) !dbg !3 {
alloca_block:
  %"0" = alloca { i1, i1 }, align 8
  %"2_0" = alloca i1, align 1
  %"2_1" = alloca i1, align 1
  %"4_0" = alloca { i1, i1 }, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store i1 %0, ptr %"2_0", align 1
  store i1 %1, ptr %"2_1", align 1
  %"2_01" = load i1, ptr %"2_0", align 1
  %"2_12" = load i1, ptr %"2_1", align 1
  %2 = insertvalue { i1, i1 } poison, i1 %"2_01", 0, !dbg !10
  %3 = insertvalue { i1, i1 } %2, i1 %"2_12", 1, !dbg !10
  store { i1, i1 } %3, ptr %"4_0", align 1, !dbg !10
  %"4_03" = load { i1, i1 }, ptr %"4_0", align 1
  store { i1, i1 } %"4_03", ptr %"0", align 1
  %"04" = load { i1, i1 }, ptr %"0", align 1
  ret { i1, i1 } %"04"
}

!llvm.module.flags = !{!0}
!llvm.dbg.cu = !{!1}

!0 = !{i32 2, !"Debug Info Version", i32 3}
!1 = distinct !DICompileUnit(language: DW_LANG_Python, file: !2, producer: "hugr_llvm_test", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug)
!2 = !DIFile(filename: "/JrSnVYeXFfvzCkHdtWCCnkJ/PKiWSKICgZuRNRvRJmbrf/qoqpIlPNzlVLC.gpy.py", directory: "/hvZsHeDgUnyeIVwAutKJHaZEPSZ/PXPeycUvnujGxZKPRCTcNfsTEGLoP/CKHhM/mzeCBZoPGeHBxpWCFCAIgmDOGX/yQmUZGJneRvyjSLkxZjvaVMrckAfo/SeQfNL")
!3 = distinct !DISubprogram(name: "_hl.main.1", linkageName: "_hl.main.1", scope: null, file: !4, line: 26394, type: !5, scopeLine: 26395, spFlags: DISPFlagLocalToUnit | DISPFlagDefinition, unit: !1)
!4 = !DIFile(filename: "/JrSnVYeXFfvzCkHdtWCCnkJ/PKiWSKICgZuRNRvRJmbrf/qoqpIlPNzlVLC.gpy.py", directory: "")
!5 = !DISubroutineType(types: !6)
!6 = !{!7, !9, !9}
!7 = !DICompositeType(tag: DW_TAG_structure_type, name: "{ i1, i1 }", file: !2, align: 8, elements: !8)
!8 = !{!9, !9}
!9 = !DIBasicType(name: "i1", size: 1, encoding: DW_ATE_unsigned)
!10 = !DILocation(line: 5299, column: 65, scope: !3)
