hugr-llvm/src/extension/snapshots/hugr_llvm__extension__prelude__test__prelude_print@llvm14.snap
---
source: hugr-llvm/src/extension/prelude.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

@0 = private unnamed_addr constant [14 x i8] c"Hello, world!\00", align 1
@prelude.print_template = private unnamed_addr constant [4 x i8] c"%s\0A\00", align 1

define internal void @_hl.main.1() {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %0 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @prelude.print_template, i32 0, i32 0), i8* getelementptr inbounds ([14 x i8], [14 x i8]* @0, i32 0, i32 0))
  ret void
}

declare i32 @printf(i8*, ...)
